# quickjs-android

./: build.gradle  gradle.properties  jitpack.yml
example/: build.gradle
example/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
quickjs-android/: build.gradle
quickjs-android/src/main/cpp/: CMakeLists.txt
quickjs-android/src/main/cpp/quickjs/: CMakeLists.txt
